# HFMcompress

./: CMakeLists.txt  main.cpp
include/: compressor.h  huffman.h
src/: compressor.cpp  huffman.cpp
